Make it more like a package

--- a/trudeau.html
+++ b/trudeau.html
@@ -150,6 +150,8 @@ span { color: blue }
 <p><em>Merci mes amis!</em></p>
 
 <script src="./trudeau-bundle.js"></script>
-
+<script>
+  get_annotations('http://jonudell.net/h/trudeau.html');
+</script>
 </body>
 </html>
