--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ span { color: blue }
 <p>On October the 19th, let’s make it happen.</p>
 <p><em>Merci mes amis!</em></p>
 
-<script src="./trudeau-bundle.js"></script>
+<script src="./dist/trudeau.js"></script>
 <script>
   get_annotations('http://jonudell.net/h/trudeau.html');
 </script>
