Switch to mark tag + opacity

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 body { margin: 1in; font-family:verdana }
-span { color: blue }
+mark { background-color: rgba(0,20,220,0.2); }
 </style>
 </head>
 
