--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ mark { background-color: rgba(0,20,220,0.2); }
 <p>On October the 19th, let’s make it happen.</p>
 <p><em>Merci mes amis!</em></p>
 
-<script src="./dist/trudeau.js"></script>
+<script src="./dist/StandaloneAnchoring.js"></script>
 <script>
   var xhr = get_annotations('http://jonudell.net/h/trudeau.html');
   xhr.addEventListener("load", function() {
